Fixing ie right align issue.

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ html, body{
 	border: none;
 	width: 60%;
 	right: 0;
-	left: initial;
+	left: auto;
 	font-size: 13px;
 	text-align: right;
 }
